# Proj_Orcamento

./: .gitignore  README.md  app.py  app2.py  exemplos.py  main.py  menu.py  mn_orcamento.py  orc_contrapiso.py  orc_eletrica.py  orc_laje.py  orc_paredes.py  orc_telhado.py  package-lock.json  pyproject.toml  requirements.txt  styles.py  utils.py
App/: __init__.py
App/Clientes/: atualizar.py  cadastrar.py  cadastro.py  clientes.py  empresa.py
App/orcamentos/: contrapiso.py  eletrica.py  fundacao.py  laje.py  menu_orc.py  paredes.py  telhado.py
_tests/: teste_btn.py
base/: __init__.py  utils.py
base/SPDA/: SPDA.py  view.py
base/clientes/: atualizar.py  cadastrar.py  clientes.py  detalhes.py  projetos.py
base/empresa/: empresa.py
base/orcamentos/: contrapiso.py  eletrica.py  fundacao.py  laje.py  menu_orc.py  paredes.py  tela_orc.py  telhado.py
components/SPDA/: models.py  view.py
custom/: __init__.py  button.py  menu_button.py  styles.py  styles1.py  styles_utils.py
env_Orcamento/: pyvenv.cfg
env_Orcamento/Scripts/: activate  activate.bat  prichunkpng  (+11 more)
examples/: exemplo1.py  exemplos.py  teste.py
models/: cliente.py  db.py  db_config.py  db_sql.py  material.py  projeto.py  servico.py  tabelas.py  usuario.py
orcamentos/: __init__.py  menu_orc.py  orc_contrapiso.py  orc_eletrica.py  orc_laje.py  orc_paredes.py  orc_telhado.py
requirements/: base.txt  dev.txt
src/: __init__.py  update_db.py
supabase/: config.toml  seed.sql
tests/: db_n_teste.py  db_teste.py  teste copy.py  teste.py  teste_btn.py
user/: __init__.py  login.py  signup.py
(+102 files in other folders)
