[project]
name = "proj-orcamento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.9.7",
]

[tool.ruff]
# Mesmo limite de linha que o Black
line-length = 160

# Configurações gerais do Ruff permanecem aqui

# Ignorar arquivos e diretórios específicos
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".env",
]

# Configurações de formatação
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Mover as regras de seleção para a seção 'lint'
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]

# Mover configurações do isort para dentro da seção 'lint'
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
